# cpp_reflection_blog

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json  docker-compose.yml
docs/: Dockerfile
enumToString/: CMakeLists.txt
enumToString/src/: advanced_enum_to_string.cpp  simple_enum_to_string.cpp
jsonserializer/: CMakeLists.txt
jsonserializer/src/: jsonserializer.cpp
